--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>welcome</title>
+</head>
 <body>
-	<h1 id="greeting">Hello, {{user}}!</h1>
+	<h1 id="greeting">'Hello, {{ user }}!'</h1>
 </body>
 </html>
