--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,6 +5,6 @@
 	<title>welcome</title>
 </head>
 <body>
-	<h1 id="greeting">'Hello, {{ user }}!'</h1>
+	<h1 id="greeting">Hello, {{ user }}!</h1>
 </body>
 </html>
